<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".MainActivity">


    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                android:transitionName="logo" />
        </LinearLayout>

        <TextView

            android:text="Email"
            android:layout_marginTop="30dp"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etEmailInput"
            android:layout_marginTop="10dp"
            android:hint="Enter Email"
            android:textColor="#ffffff"
            android:textColorHint="#A9A9A9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:text="Password"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/etPassInput"
            android:layout_marginTop="10dp"
            android:hint="Enter Password"
            android:textColorHint="#A9A9A9"
            android:imeActionId="@+id/login"
            android:imeActionLabel="Login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword|numberPassword"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:clickable="true"
            android:id="@+id/btnSubmit"
            android:layout_marginTop="10dp"
            android:text="Submit"
            android:focusable="true"
            android:elevation="20dp"
            android:background="@drawable/button_bg"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:id="@+id/show"
            android:text="show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>